manifests/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
    - protocol: HTTP
      port: 80
      name: prod-web-gw
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: streamlit-route
spec:
  parentRefs:
    - name: prod-web
  hostnames:
    - "streamlit"
  rules:
    - backendRefs:
        - name: streamlit-service
          port: 8501
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse-route
spec:
  parentRefs:
    - name: prod-web
  hostnames:
    - "langfuse.example.com"
  rules:
    - backendRefs:
        - name: langfuse-web
          namespace: langfuse
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-default-httproute
  namespace: langfuse
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ""
      kind: Service
